--- a/src/com/lin/nls_export/fx/pane_nls_key_setting.fxml
+++ b/src/com/lin/nls_export/fx/pane_nls_key_setting.fxml
@@ -7,25 +7,24 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="CENTER_LEFT" minWidth="270.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lin.nls_export.controller.NlsKeySettingPaneController">
-   <children>
-      <Label fx:id="labelHandleName" maxWidth="60.0" minWidth="60.0" prefWidth="50.0" text="Key:">
-         <font>
-            <Font size="13.0" />
-         </font>
-         <HBox.margin>
-            <Insets top="10.0" />
-         </HBox.margin>
-      </Label>
-      <TextField fx:id="textFieldForColumnName" promptText="输入该属性在单元格中的名字" HBox.hgrow="ALWAYS">
-         <HBox.margin>
-            <Insets left="10.0" top="10.0" />
-         </HBox.margin>
-      </TextField>
-      <CheckBox fx:id="cbIsRead" mnemonicParsing="false" text="读取">
-         <HBox.margin>
-            <Insets left="10.0" top="10.0" />
-         </HBox.margin>
-      </CheckBox>
-   </children>
+<HBox alignment="CENTER_LEFT" minWidth="270.0" xmlns="http://javafx.com/javafx/8.0.121"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lin.nls_export.controller.NlsKeySettingPaneController">
+   <Label fx:id="labelHandleName" maxWidth="60.0" minWidth="60.0" prefWidth="50.0" text="Key:">
+      <font>
+         <Font size="13.0"/>
+      </font>
+      <HBox.margin>
+         <Insets top="10.0"/>
+      </HBox.margin>
+   </Label>
+   <TextField fx:id="textFieldForColumnName" promptText="输入该属性在单元格中的名字" HBox.hgrow="ALWAYS">
+      <HBox.margin>
+         <Insets left="10.0" top="10.0"/>
+      </HBox.margin>
+   </TextField>
+   <CheckBox fx:id="cbIsRead" mnemonicParsing="false" text="读取">
+      <HBox.margin>
+         <Insets left="10.0" top="10.0"/>
+      </HBox.margin>
+   </CheckBox>
 </HBox>
